Fixed spacing

--- a/application/views/stylesheets/customStyle.css
+++ b/application/views/stylesheets/customStyle.css
@@ -1,18 +1,26 @@
     #content {
-        padding-left: 50px;
-        padding-right: 50px;
-        padding-bottom: 40px;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-bottom: 40px;
+      text-align: center;
+
+    }
+    #main-menu {
+      margin: auto;
+      width: 50%;
+      border: 3px solid green;
+      padding: 10px;
     }
     div.footer {
-        right: 0;
-        bottom: 0;
-        left: 0;
-        padding: 1rem;
-        text-align: center;
-        position:absolute;
-        bottom:0;
-        width:100%;
-        height:60px;   /* Height of the footer */
+      right: 0;
+      bottom: 0;
+      left: 0;
+      padding: 1rem;
+      text-align: center;
+      position:absolute;
+      bottom:0;
+      width:100%;
+      height:60px;   /* Height of the footer */
     }
     html, body {
       min-height: 100%;
